Added Risk Matrix Table activity. Revised Risk Matrix Fragment. Added xml files for risk matrix fragment and table. Added code to fetch risk array in jsonReader. Added code to fetch consequences in jsonReader.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
             android:name=".MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".riskmatrixtable2"
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
     </application>
 
